apps/prombiz/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prombiz-site
  labels:
    app.kubernetes.io/name: prombiz-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prombiz-site
  ports:
    - name: http
      port: 8080
      targetPort: http
