apps/prombiz/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prombiz
  labels:
    app.kubernetes.io/name: prombiz
spec:
  ingressClassName: nginx
  rules:
    - host: prombiz.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prombiz-site
                port:
                  name: http
